--- a/Application_UI/application-ui/src/app/components/home/home.component.css
+++ b/Application_UI/application-ui/src/app/components/home/home.component.css
@@ -16,3 +16,9 @@ button:hover {
 .item:hover {
   border: 1px solid rgb(39, 38, 38);
 }
+
+.add-animals-button-container{
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 5px;
+}
