--- a/Application_UI/application-ui/src/app/components/home/home.component.html
+++ b/Application_UI/application-ui/src/app/components/home/home.component.html
@@ -3,6 +3,9 @@
     class="h-[30rem] w-full bg-cover bg-center items-center"
     style="background-image: url('../../../assets/logo/pet_background.jpg')"
   >
+    <div class="add-animals-button-container">
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#formModal">Add Animal</button>
+    </div>
     <div
       class="flex items-center justify-center h-full w-full flex-col relative"
     >
@@ -97,6 +100,96 @@
       </ul>
     </div>
   </div>
+  <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <form>
+
+            <div class="form-group">
+              <label for="animalType">Animal Type</label>
+              <input type="text" class="form-control" id="animalType" aria-describedby="emailHelp" placeholder="Enter the animal type(e.g. dog, crocodile, cat, eagle, etc...)">
+            </div>
+
+            <div class="form-group">
+              <label for="animalBreed">Animal Breed</label>
+              <input type="text" class="form-control" id="animalBreed" aria-describedby="emailHelp" placeholder="Enter animal breed for his according type(e.g. dog -> bichon, etc...">
+            </div>
+
+            <div class="form-group">
+              <label for="animalName">Animal Name</label>
+              <input type="text" class="form-control" id="animalName" aria-describedby="emailHelp" placeholder="Enter the name of the animal">
+            </div>
+
+            <div class="form-group">
+              <label for="animalAge">Animal Age</label>
+              <input type="number" class="form-control" id="animalAge" aria-describedby="emailHelp" placeholder="Enter the age of the animal">
+            </div>
+
+            <div class="form-group">
+              <label for="animalSize">Animal Size</label>
+              <select class="form-control" id="animalSize">
+                <option>Small</option>
+                <option>Medium</option>
+                <option>Large</option>
+                <option>Extra Large</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="animalHealth">Animal Health</label>
+              <input type="text" class="form-control" id="animalHealth" aria-describedby="emailHelp" placeholder="Animal health details">
+            </div>
+
+            <div class="form-group">
+              <label for="animalGender">Animal Gender</label>
+              <select class="form-control" id="animalGender">
+                <option>Male</option>
+                <option>Female</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="goodWith">Good With</label>
+              <select class="form-control" id="goodWith">
+                <option>Cats</option>
+                <option>Dogs</option>
+                <option>Kids</option>
+                <option>People with special needs</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="coatTypes">Coat Types</label>
+              <select class="form-control" id="coatTypes">
+                <option>Hairless</option>
+                <option>Short</option>
+                <option>Medium</option>
+                <option>Long</option>
+                <option>Wire</option>
+                <option>Curly</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="shelter">Shelter ID</label>
+              <input type="text" class="form-control" id="shelter" aria-describedby="emailHelp" placeholder="">
+            </div>
+
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="specialTrained" id="inlineRadio1" value="option1">
+              <label class="form-check-label" for="inlineRadio1">Special Trained?</label>
+            </div>
+          </form>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <footer class="bg-gray-800 text-white p-4 mt-[10rem]">
   <div class="container mx-auto flex justify-between">
@@ -122,3 +215,4 @@
     </div>
   </div>
 </footer>
+
