--- a/Application_UI/application-ui/src/styles.css
+++ b/Application_UI/application-ui/src/styles.css
@@ -3,6 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 @import "~@fortawesome/fontawesome-free/css/all.css";
+/* @import "~@angular/material/prebuilt-themes/purple-green.css"; */
 
 html,
 body {
@@ -13,3 +14,24 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: rgb(243, 242, 242);
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
